[gd_scene load_steps=22 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://tyles.tres" type="TileSet" id=2]
[ext_resource path="res://caster.png" type="Texture" id=3]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://new folder/robo/idle/idle_1.png" type="Texture" id=5]
[ext_resource path="res://new folder/robo/idle/idle_2.png" type="Texture" id=6]
[ext_resource path="res://new folder/robo/boost/boost_1.png" type="Texture" id=7]
[ext_resource path="res://new folder/robo/boost/boost_2.png" type="Texture" id=8]
[ext_resource path="res://light.png" type="Texture" id=9]
[ext_resource path="res://new folder/robo/flashlight.png" type="Texture" id=10]
[ext_resource path="res://lights.gd" type="Script" id=11]
[ext_resource path="res://new folder/dirt/shit_puddle.png" type="Texture" id=12]
[ext_resource path="res://kacke1.gd" type="Script" id=13]

[sub_resource type="OccluderPolygon2D" id=6]

closed = true
cull_mode = 0
polygon = PoolVector2Array( -16, -16, -16, 16, 16, 16, 16, -16 )

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 26.679

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "boost",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=3]

resource_name = "flash"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

resource_name = "fwwa"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.4, 0.2 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/blue_light2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 210.297, 44.2834 ), Vector2( 38.8224, 39.7709 ), Vector2( 210.297, 44.2834 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/blue_light2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/blue_light2:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.8, 0.2, 1.0, 0.2, 0.8 ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=8]

resource_name = "Neue Animation"
length = 3.0
loop = false
step = 0.1

[node name="base" type="Node2D" index="0"]

_sections_unfolded = [ "Material", "Visibility" ]

[node name="ambient" type="CanvasModulate" parent="." index="0"]

color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="bg" type="Sprite" parent="." index="1"]

position = Vector2( 401.251, 301.906 )
scale = Vector2( 6.39454, 4.82665 )
texture = ExtResource( 1 )

[node name="casters" type="Node2D" parent="." index="2"]

position = Vector2( 0, 0.527039 )

[node name="TileMap" type="TileMap" parent="casters" index="0"]

position = Vector2( -2.70746, 1.80499 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 65536, 0, 0, 65543, 0, 0, 65547, 0, 0, 65550, 0, 0, 65553, 0, 0, 65556, 0, 0, 65559, 0, 0, 131072, 0, 0, 131079, 0, 0, 131083, 0, 0, 131086, 0, 0, 131089, 0, 0, 131092, 0, 0, 131095, 0, 0, 196608, 0, 0, 196615, 0, 0, 196619, 0, 0, 196622, 0, 0, 196625, 0, 0, 196628, 0, 0, 196631, 0, 0, 262144, 0, 0, 262151, 0, 0, 262155, 0, 0, 262167, 0, 0, 327680, 0, 0, 327691, 0, 0, 327703, 0, 0, 393216, 0, 0, 393227, 0, 0, 393239, 0, 0, 458752, 0, 0, 458759, 0, 0, 458763, 0, 0, 458775, 0, 0, 524288, 0, 0, 524295, 0, 0, 524299, 0, 0, 524311, 0, 0, 589824, 0, 0, 589831, 0, 0, 589835, 0, 0, 589847, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 4, 0, 655383, 0, 0, 720896, 0, 0, 720907, 0, 0, 720908, 4, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 786432, 0, 0, 786443, 0, 0, 786444, 4, 0, 786455, 0, 0, 851968, 0, 0, 851979, 0, 0, 851980, 2, 0, 851981, 2, 0, 851991, 0, 0, 917504, 0, 0, 917515, 0, 0, 917527, 0, 0, 983040, 0, 0, 983051, 0, 0, 983063, 0, 0, 1048576, 0, 0, 1048587, 0, 0, 1048599, 0, 0, 1114112, 0, 0, 1114123, 0, 0, 1114135, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0 )
_sections_unfolded = [ "Cell", "Visibility" ]

[node name="Sprite" type="Sprite" parent="casters" index="1"]

position = Vector2( 415, 374.473 )
scale = Vector2( 2.1875, 0.3125 )
texture = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="casters/Sprite" index="0"]

occluder = SubResource( 6 )
light_mask = 1

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="3"]

position = Vector2( 507.055, 260.352 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]

shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D" index="1"]

rotation = 1.5708
scale = Vector2( 3, 3 )
z_index = 1
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="blue_light" type="Light2D" parent="KinematicBody2D/AnimatedSprite" index="0"]

position = Vector2( 4.66604, -1.7948 )
rotation = -1.5708
scale = Vector2( 0.03, 0.03 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.35584, 0.976563, 0.00762939, 1 )
energy = 0.339713
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 1.4
shadow_filter = 3
shadow_filter_smooth = 5.3
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/AnimatedSprite/blue_light" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/flash = SubResource( 3 )
anims/fwwa = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="flashlight" type="Light2D" parent="KinematicBody2D/AnimatedSprite" index="1"]

position = Vector2( 1.31895, -8.20229 )
rotation = -3.57628e-006
scale = Vector2( 0.161544, 0.175124 )
enabled = true
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
texture_scale = 0.8
color = Color( 1, 1, 1, 1 )
energy = 0.6
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.3, 1.3 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="lights" type="Node2D" parent="." index="4"]

script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="lights" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/flashing = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="blue_light2" type="Light2D" parent="lights/AnimationPlayer" index="0"]

position = Vector2( 185.103, 64.5794 )
scale = Vector2( 0.656581, 0.576745 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.752791
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 1.4
shadow_filter = 3
shadow_filter_smooth = 5.3
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="rooomlight" type="Light2D" parent="." index="5"]

position = Vector2( 559.507, 293.95 )
rotation = 1.5708
scale = Vector2( 0.595136, 0.665091 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="bottom_rooomlight" type="Light2D" parent="." index="6"]

position = Vector2( 566.309, 481.682 )
rotation = 1.5708
scale = Vector2( 0.595136, 0.665091 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( 400, 300 )
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="StaticBody2D" type="Area2D" parent="Sprite" index="0"]

position = Vector2( -1.90735e-006, 1.90735e-006 )
scale = Vector2( 0.625, 0.625 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D" index="0"]

shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/StaticBody2D" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Neue Animation" = SubResource( 8 )
blend_times = [  ]

[connection signal="body_entered" from="Sprite/StaticBody2D" to="Sprite" method="kackeBetreten"]

[connection signal="animation_finished" from="Sprite/StaticBody2D/AnimationPlayer" to="Sprite" method="zeitUm"]


